{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 231,
  "lineage": "4e7319d2-2d20-1a5e-4be6-f5b371b993c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c285ed74ae678376",
            "association_id": "eipassoc-0fec4b333de4e32c1",
            "domain": "vpc",
            "id": "eipalloc-0c285ed74ae678376",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06cbb770141c15795",
            "private_dns": "ip-10-0-65-34.ec2.internal",
            "private_ip": "10.0.65.34",
            "public_dns": "ec2-100-28-191-162.compute-1.amazonaws.com",
            "public_ip": "100.28.191.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:internet-gateway/igw-0a3d6155ebf55f52f",
            "id": "igw-0a3d6155ebf55f52f",
            "owner_id": "825844616809",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "dependencies": [
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c285ed74ae678376",
            "connectivity_type": "public",
            "id": "nat-02175a14a9df4e6d9",
            "network_interface_id": "eni-06cbb770141c15795",
            "private_ip": "10.0.65.34",
            "public_ip": "100.28.191.162",
            "subnet_id": "subnet-025de391693398fcb",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:route-table/rtb-07989acb1533c0c8e",
            "id": "rtb-07989acb1533c0c8e",
            "owner_id": "825844616809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02175a14a9df4e6d9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:route-table/rtb-088f00f1683420edf",
            "id": "rtb-088f00f1683420edf",
            "owner_id": "825844616809",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a3d6155ebf55f52f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026bc9236767d99da",
            "route_table_id": "rtb-07989acb1533c0c8e",
            "subnet_id": "subnet-076f3dc264c883808"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e659a92891c7327",
            "route_table_id": "rtb-07989acb1533c0c8e",
            "subnet_id": "subnet-00fe4d0ad4047d7a7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2101a5aca7d0252",
            "route_table_id": "rtb-088f00f1683420edf",
            "subnet_id": "subnet-025de391693398fcb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc5668bae4faff18",
            "route_table_id": "rtb-088f00f1683420edf",
            "subnet_id": "subnet-0cf5c81f59dd103fd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:subnet/subnet-076f3dc264c883808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076f3dc264c883808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825844616809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "dependencies": [
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:subnet/subnet-00fe4d0ad4047d7a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fe4d0ad4047d7a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825844616809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "dependencies": [
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:subnet/subnet-025de391693398fcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025de391693398fcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825844616809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "dependencies": [
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:subnet/subnet-0cf5c81f59dd103fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf5c81f59dd103fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825844616809",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-04eaf7868822b4195"
          },
          "dependencies": [
            "aws_vpc.aws-eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825844616809:vpc/vpc-04eaf7868822b4195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b8575e37a88b3d2a",
            "default_route_table_id": "rtb-035996f2ffbfdb18d",
            "default_security_group_id": "sg-07d9abdcd3d6a60d6",
            "dhcp_options_id": "dopt-e9327c93",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04eaf7868822b4195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035996f2ffbfdb18d",
            "owner_id": "825844616809",
            "tags": {
              "Name": "aws-eks-vpc"
            },
            "tags_all": {
              "Name": "aws-eks-vpc"
            }
          }
        }
      ]
    }
  ]
}